[package]
name = "markdawn"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3.31"
notify = "8.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
